Fix canvas/tile aspect ratio: remove height stretch, set width 100% height auto for surfaceCanvas. Prevents biome tile distortion. [atomic css fix]

--- a/galaxy_game/app/assets/stylesheets/admin/_monitor_styles.scss
+++ b/galaxy_game/app/assets/stylesheets/admin/_monitor_styles.scss
@@ -117,13 +117,13 @@ footer .console-line {
 
 #canvasContainer {
   position: relative;
-  display: flex;
+  display: block;
   min-width: 0;
   min-height: 0;
   width: 100%;
-  height: 100%;
-  align-items: stretch;
-  justify-content: stretch;
+  /* height: 100%; removed for aspect ratio fix */
+  /* align-items: stretch; removed */
+  /* justify-content: stretch; removed */
 }
 
 #planetCanvas {
